add integration steps, fixing bugs